<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- CONTENIDO (TMDb) -->
    <PreferenceScreen
        android:key="screen_content"
        android:title="@string/settings_section_content_title"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pc_tmdb_settings"
            android:title="@string/settings_category_tmdb"
            app:iconSpaceReserved="false">

            <SwitchPreferenceCompat
                android:key="ENABLE_TMDB"
                android:title="@string/settings_enable_tmdb_title"
                android:summary="@string/settings_enable_tmdb_summary"
                android:defaultValue="true"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- REPRODUCTOR -->
    <PreferenceScreen
        android:key="screen_playback"
        android:title="@string/player_settings"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:title="@string/autoplay_settings"
            app:iconSpaceReserved="false">

            <SwitchPreference
                android:key="AUTOPLAY"
                android:title="@string/settings_autoplay"
                android:defaultValue="true"
                android:summaryOn="@string/settings_autoplay_on"
                android:summaryOff="@string/settings_autoplay_off"
                app:iconSpaceReserved="false" />

            <EditTextPreference
                android:key="p_settings_autoplay_buffer"
                android:title="@string/settings_autoplay_buffer_title"
                android:defaultValue="3"
                android:inputType="number"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/player_settings"
            app:iconSpaceReserved="false">

            <SwitchPreference
                android:key="PLAYER_GESTURES"
                android:title="@string/settings_player_gestures"
                android:defaultValue="true"
                android:summaryOn="@string/settings_player_gestures_on"
                android:summaryOff="@string/settings_player_gestures_off"
                app:iconSpaceReserved="false" />

            <SwitchPreference
                android:key="KEEP_SCREEN_ON_WHEN_PAUSED"
                android:title="@string/settings_keep_screen_on_when_paused"
                android:defaultValue="false"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- APARIENCIA -->
    <PreferenceScreen
        android:key="screen_appearance"
        android:title="@string/settings_category_appearance"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pc_appearance_settings"
            android:title="@string/settings_category_appearance"
            app:iconSpaceReserved="false">

            <ListPreference
                android:key="APP_LANGUAGE"
                android:title="@string/settings_app_language_title"
                android:defaultValue="system"
                app:iconSpaceReserved="false" />

            <ListPreference
                android:key="SELECTED_THEME"
                android:title="@string/settings_theme_title"
                android:entries="@array/theme_names"
                android:entryValues="@array/theme_values"
                android:defaultValue="default"
                app:iconSpaceReserved="false" />

            <SwitchPreference
                android:key="IMMERSIVE_MODE"
                android:title="@string/settings_immersive_mode"
                android:summary="@string/settings_immersive_mode_summary"
                android:defaultValue="false"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- PROVEEDORES (CUEVANA / CINE24) -->
    <PreferenceScreen
        android:key="screen_provider"
        android:title="@string/settings_category_provider_title"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pc_cuevana_settings"
            android:title="@string/settings_category_cuevana"
            app:iconSpaceReserved="false">
            <EditTextPreference
                android:key="provider_cuevana_domain"
                android:title="@string/settings_category_cuevana_domain"
                android:inputType="text"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- INFORMACIÓN DE LA APP -->
    <PreferenceCategory
        android:title="Aplicación"
        app:iconSpaceReserved="false">

        <Preference
            android:icon="@drawable/ic_settings_about"
            android:key="p_settings_about"
            android:title="@string/settings_about"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>